# cookiecutter-ccres

./: .pre-commit-config.yaml  README.md  _get_licences.py  cookiecutter.json  get_licences.py
.github/: ISSUE_TEMPLATE.md
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requirements_dev.txt  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: ci.yaml  deploy_pypi.yaml  tests.yaml
{{cookiecutter.project_slug}}/docs/scripts/: plot.py
{{cookiecutter.project_slug}}/docs/source/: conf.py  index.md  index.rst
{{cookiecutter.project_slug}}/docs/source/api_documentation/: cli.rst
{{cookiecutter.project_slug}}/docs/source/get-started/: index.md
{{cookiecutter.project_slug}}/docs/source/how_to/: how-to-run.md
{{cookiecutter.project_slug}}/tests/data/: .placeholder
{{cookiecutter.project_slug}}/tests/logger/: test_logger.py
{{cookiecutter.project_slug}}/tests/test_cli/: test_cli.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  logger.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/cli/: cli.py
